--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
           <h3 class="main-content-title">Summary</h3>
           <p class="about-me-description">
             &nbsp &nbsp I am hardworking, assiduous, decent, I know how to work
-            in a team, I supervised more than twenty employees, I know how to
-            conduct business negotiations. I am ready to work for a minimum
-            salary in order to gain experience in this profession as soon as
-            possible.
+            in a team and worked with more than twenty employees.
           </p>
           <a
             href="https://maxdm2021.github.io/CV-Maxim-Dmitriev/motiveletter.html"
@@ -283,10 +280,10 @@
             Prydniprovska State Academy of Civil Engineering and Architecture
           </h4>
           <h5 сlass="specialization">industrial and civil construction</h5>
-          <p class="my-work-experience-period">
+          <!-- <p class="my-work-experience-period">
             September 2000 - June 2005
             <span class="my-work-experience-divider">|</span> Ukraine
-          </p>
+          </p> -->
         </div>
       </div>
 
