--- a/motiveletter.html
+++ b/motiveletter.html
@@ -28,11 +28,11 @@
           <p class="des">
             &nbsp &nbsp I'm happy to be applying to the currently open IT
             Specialist position at your company. I am a Junior Front
-            End Developer and master HTML5, CSS3, JavaScript, React. In addition
+            End Developer and master HTML5, CSS3, JavaScript, React, Node.js. In addition
             to this, I have experience with implementing both individual and
             team projects. Your vacancy is interesting for me as I want to
             participate in the development of your products. It is important to me to grow as a Front
-            End developer and put into practice my knowledge in JS and React. It
+            End or Full Stag developer and put into practice my knowledge in JS, React and Node.js. It
             would be an honor to do that at your company.
           </p>
           <span class="sir__madam">&nbsp &nbsp Maksym Dmtriiev. </span> <br/>
