--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
               <span class="my-work-experience-company">MDS-engeeniring </span>
             </h4>
             <p class="my-work-experience-period">
-              September 2015 - up to now
-              <span class="my-work-experience-divider">|</span> Ukraine
+             2015 - 2021
             </p>
             <ul class="my-work-experience-duties">
               <li class="my-work-experience-duty">
@@ -274,12 +273,12 @@
           <h5 сlass="specialization">Full-stack developer</h5>
           <p class="my-work-experience-period">
             Desember 2021 - December 2022
-            <span class="my-work-experience-divider">|</span> Ukraine (on-line)
+            <!-- <span class="my-work-experience-divider">|</span> Ukraine (on-line) -->
           </p>
           <h4 class="my-work-experience-company">
             Prydniprovska State Academy of Civil Engineering and Architecture
           </h4>
-          <h5 сlass="specialization">industrial and civil construction</h5>
+          <h5 сlass="specialization">Industrial and civil engineering</h5>
           <!-- <p class="my-work-experience-period">
             September 2000 - June 2005
             <span class="my-work-experience-divider">|</span> Ukraine
