--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--about me section-->
         <div class="about-me-section">
           <h1 class="about-me-name">Maksym Dmitriiev</h1>
-          <h2 class="about-me-profession">Junior Full-stack developer</h2>
+          <h2 class="about-me-profession">Full-stack developer</h2>
           <h3 class="main-content-title">Summary</h3>
           <p class="about-me-description">
             &nbsp &nbsp I am hardworking, assiduous, decent, I know how to work
@@ -272,7 +272,7 @@
           <h4 class="my-work-experience-company">IT School GoIT</h4>
           <h5 сlass="specialization">Full-stack developer</h5>
           <p class="my-work-experience-period">
-            Desember 2021 - December 2022
+            Desember 2021 - February 2022
             <!-- <span class="my-work-experience-divider">|</span> Ukraine (on-line) -->
           </p>
           <h4 class="my-work-experience-company">
@@ -295,8 +295,8 @@
 
           <div>
             <span class="contacts-section-tipe"> C:</span>
-            <a class="contacts-section-link" href="tel:+3530873495865"
-              >+353 87 372 27 39</a
+            <a class="contacts-section-link" href="tel:+353873495865"
+              >+353 87 349 58 65</a
             >
           </div>
 
