--- a/index.html
+++ b/index.html
@@ -393,6 +393,9 @@
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">Cypress/Jest</span>
             </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">Wordpress</span>
+            </li>
           </ul>
         </div>
 
