--- a/index.html
+++ b/index.html
@@ -495,6 +495,16 @@
         </div>
 
 
+        <div class="soft-skills-section">
+          <h3 class="sidebar-title">Reference</h3>
+          <ul class="tech-skills-list">
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">Will provide upon request</span>
+            </li>
+        
+          </ul>
+        </div>
+
 
       </aside>
     </div>
