--- a/index.html
+++ b/index.html
@@ -40,6 +40,34 @@
             <li class="my-projects-item">
               <span class="my-projects-text">
                 <a
+                  href="https://react-crypto-app-r5uw.vercel.app/"
+                  class="my-projects-link"
+                  >My crypto wallet(frontend)</a
+                >
+                ...................................................................................<span
+                  ><a
+                    href="https://github.com/MaxDM2021/react-crypto-app/tree/main/frontend"
+                    class="link"
+                    ><b>[</b>_link_<b>]</b></a
+                  ></span
+                >
+              </span>
+              <p class="description">
+                Example of using components, react-dom, hooks, routes, ANT Design, React-chartjs-2, Vite [React.js]
+              </p>
+            </li>
+
+
+
+
+
+
+
+
+
+            <li class="my-projects-item">
+              <span class="my-projects-text">
+                <a
                   href="https://pets-project-frontend.vercel.app/"
                   class="my-projects-link"
                   >Petly (frontend team-project)</a
