--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 >
               </span>
               <p class="description">
-                Example of using components, react-dom, hooks, routes, ANT Design, React-chartjs-2, Vite [React.js]
+                Example of using components, react-dom, hooks, ANT Design, React-chartjs-2, Vite [React.js]
               </p>
             </li>
 
