--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
           <h2 class="about-me-profession">Full-stack developer</h2>
           <h3 class="main-content-title">Summary</h3>
           <p class="about-me-description">
-            &nbsp &nbsp I am hardworking, assiduous, decent, I know how to work
-            in a team and worked with more than twenty employees.
+            &nbsp &nbsp I am a flexible and experienced employee with excellent time management skills.  I am a good communicator with proven interpersonal skills and am used to working in a team whilst also capable of using my own initiative.  I am skilled in dealing with problems in a resourceful manner.  I am organised, good at planning and prioritising tasks as necessary .  I am task focused and will work hard at whatever needs to be done.  I am always enthusiastic by nature and always happy to learn new things and undertake new challenges. 
           </p>
           <a
             href="https://maxdm2021.github.io/CV-Maxim-Dmitriev/motiveletter.html"
@@ -256,9 +255,9 @@
 
           <h4 class="my-work-experience-position">
          
-            <span class="my-work-experience-company">    DLDC (Donegal Local Development Company)</span>
+            <span class="my-work-experience-company">    DLDC (Donegal Local Development Company, Ireland)</span>
           </h4>
-         <h5>Administrator (Donegal town, Ireland), 2023 - now</h5> 
+         <h5>Administrator (Donegal town), 2023 - now</h5> 
          <h4> </h4>
 
          <h4 class="my-work-experience-position">
@@ -272,7 +271,7 @@
 
           <div class="my-work-experience-company-block">
             <h4 class="my-work-experience-position">
-              <span class="my-work-experience-company">MDS-engeeniring  2015 - 2021</span>
+              <span class="my-work-experience-company">MDS-engeeniring (Ukraine)</span>
             </h4>
                 <h5>Project-manager, architect, engineer 2015 - 2021</h5>
             <ul class="my-work-experience-duties">
@@ -312,7 +311,7 @@
         <div class="my-education-section">
           <h3 class="main-content-title education">Education</h3>
           <h4 class="my-work-experience-company">IT School GoIT</h4>
-          <h5 сlass="specialization">Full-stack developer</h5>
+          <h5 сlass="specialization">Full-stack developer, Certificate, QQI level-6 </h5>
           <p class="my-work-experience-period">
             Desember 2021 - February 2022
             <!-- <span class="my-work-experience-divider">|</span> Ukraine (on-line) -->
@@ -320,7 +319,7 @@
           <h4 class="my-work-experience-company">
             Prydniprovska State Academy of Civil Engineering and Architecture
           </h4>
-          <h5 сlass="specialization">Industrial and civil engineering</h5>
+          <h5 сlass="specialization">Industrial and civil engineering, Higher degree diploma, QQI level-9</h5>
           <!-- <p class="my-work-experience-period">
             September 2000 - June 2005
             <span class="my-work-experience-divider">|</span> Ukraine
@@ -389,14 +388,18 @@
               <span class="tech-skills-item-text">CSS3</span>
             </li>
             <li class="tech-skills-item">
+              <span class="tech-skills-item-text">JavaScript</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">TypeScript</span>
+            </li>
+            <li class="tech-skills-item">
               <span class="tech-skills-item-text">GitHub</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">WebPack/Parsel</span>
+              <span class="tech-skills-item-text">WebPack/Parsel/Vite</span>
             </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">JavaScript</span>
-            </li>
+      
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">React.js</span>
             </li>
@@ -413,7 +416,7 @@
               <span class="tech-skills-item-text">Node.js</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Mongodb</span>
+              <span class="tech-skills-item-text">Mongodb/Prisma</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">Netlify/Render/Heroku</span>
@@ -470,20 +473,31 @@
           <h3 class="sidebar-title">Courses</h3>
           <ul class="tech-skills-list">
             <li class="tech-skills-item">
+              <span class="tech-skills-item-text">Full-stack developer(Ukraine)</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">JavaSkript developer(Ireland)</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">React, TypeScript, Redux Toolkit, Express, Prisma course</span>
+            </li>
+            <li class="tech-skills-item">
               <span class="tech-skills-item-text">English Level-4(ETB-centre Ireland)</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Safe passe(Ireland)</span>
+              <span class="tech-skills-item-text">Safepass(Ireland)</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Manual handling(Ireland)</span>
+              <span class="tech-skills-item-text">Health & Safety and <br/>
+                Manual handling(Ireland)</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">Customer exelellent(Ireland)</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Full-stack developer(Ukraine)</span>
+              <span class="tech-skills-item-text">Steps to success(Ireland)</span>
             </li>
+
           </ul>
 
 
