--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
           <div>
             <span class="contacts-section-tipe"> G: </span>
             <a class="contacts-section-link" href="https://github.com/MaxDM2021"
-              >https://github.com/MaxDM2021
+              >GitHub
             </a>
           </div>
           <div>
@@ -381,6 +381,18 @@
         <div class="tech-skills-section">
           <h3 class="sidebar-title">Tech skills</h3>
           <ul class="tech-skills-list">
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text"> Microsoft 365</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text"> Microsoft SharePoint</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text"> Microsoft Power Apps</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text"> Microsoft Power Automate</span>
+            </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text"> HTML5</span>
             </li>
