--- a/index.html
+++ b/index.html
@@ -36,6 +36,31 @@
         <div class="my-projects-section">
           <h3 class="main-content-title">Projects</h3>
           <ol class="my-projects-list">
+
+
+
+<li class="my-projects-item">
+  <span class="my-projects-text">
+    <a
+      href="https://maxdm2021.github.io/BallyshannonMuseum/"
+      class="my-projects-link"
+      >BallyshannonMuseum</a
+    >
+    ......................................................................................................<span
+      ><a
+        href="https://github.com/MaxDM2021/BallyshannonMuseum"
+        class="link"
+        ><b>[</b>_link_<b>]</b></a
+      ></span
+    >
+  </span>
+  <p class="description">
+    Example of using Wordpress + Elementor, Easy Appointments, MetForm
+  </p>
+</li>
+
+
+
             <li class="my-projects-item">
               <span class="my-projects-text">
                 <a
@@ -43,7 +68,7 @@
                   class="my-projects-link"
                   >My crypto wallet(frontend)</a
                 >
-                ...................................................................................<span
+                ..........................................................................................<span
                   ><a
                     href="https://github.com/MaxDM2021/react-crypto-app/tree/main/frontend"
                     class="link"
@@ -437,7 +462,10 @@
               <span class="tech-skills-item-text">Cypress/Jest</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Wordpress</span>
+              <span class="tech-skills-item-text">Wordpress+Elementor</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">Wordpress+Woocommerce</span>
             </li>
           </ul>
         </div>
